# cadex

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
aircraft/dart10kg/: aircraft.json  aircraft.jsonl
aircraft/dart16kg/: aircraft.json  aircraft.jsonl
aircraft/dart1kg/: aircraft.json
aircraft/dart80kg/: aircraft.json  aircraft.jsonl
aircraft/dartv1/: aircraft.json  aircraft.jsonl
aircraft/persistence-folder-probe/: aircraft.json
scripts/: analyze-machupx.mjs  analyze-openfoam.mjs  analyze-openvsp-elements.mjs  build-slim-app.mjs  export-openvsp-analysis.mjs  export-openvsp-elements.mjs  export-openvsp-faithful.mjs  extract-modules.mjs  generate-icons.mjs  openfoam-docker  render-paraview.mjs  run-machupx.py  split-sketch-browser.mjs  validate-jet-engine.mjs  validate-openfoam-surfaces.mjs  validate-panel-metric-info.mjs  validate-propulsion-engine.mjs  validate-sizing-engine.mjs  validate-sizing-metric-info.mjs  validate-sketch-projection.mjs  wrap-extracted.mjs
src/: App.tsx  SizeMode.tsx  SketchMode.tsx  ai.ts  geometry.ts  jetEngine.ts  maxOptimizer.ts  propulsionEngine.ts  sizingEngine.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dispatch.rs  legacy.rs  main.rs  model.rs  openai_response.rs  openvsp_sizing.rs  tools.rs
src-tauri/src/cad/: booleans.rs  features.rs  io.rs  mod.rs  primitives.rs  sketches.rs  state.rs  tessellate.rs  tests.rs  transforms.rs  types.rs
(+65 files in other folders)
