[package]
name = "cadex"
version = "0.1.0"
description = "Parametric aerofoil, flying wing, and aircraft designer"
authors = ["Cadex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "2"
cadrum = { version = "0.8", features = ["source-build"] }
uuid = { version = "1", features = ["v4", "serde"] }
